--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -8,6 +8,7 @@
 		initialize="init()"
 		applicationComplete="applicationCompleteHandler(event)"
 		creationComplete="creationCompleteHandler(event)"
+		minWidth="800" minHeight="600"
 		xmlns:mx="http://www.adobe.com/2006/mxml"
 		xmlns:graph="net.vdombox.powerpack.graph.*"
 		xmlns:ui="net.vdombox.powerpack.lib.extendedapi.ui.*"
@@ -1497,7 +1498,8 @@
 					</panel:Graphs>
 
 					<mx:Panel creationIndex="1" width="100%" height="100%" layout="absolute"
-							  title="{LanguageManager.sentences.graph_editor}" backgroundAlpha="0.5">
+							  title="{LanguageManager.sentences.graph_editor}" backgroundAlpha="0.5" 
+							  minWidth="300">
 						<mx:VBox height="100%" width="100%" verticalGap="1">
 							<controlbar:GraphEditorControlBar id="graphEditorControlBar"
 														   width="100%"/>
