--- a/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/control/DialogComboBox.mxml
+++ b/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/control/DialogComboBox.mxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:ComboBox xmlns:mx="http://www.adobe.com/2006/mxml"
-			 dropdownFactory="net.vdombox.powerpack.lib.player.control.DialogDropDownListBase">
+			 dropdownFactory="net.vdombox.powerpack.lib.player.control.DialogDropDownListBase"  rowCount="5"  >
 	
 	<mx:Script>
 		<![CDATA[
