--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -929,6 +929,8 @@
 				PopUpManager.centerPopUp(playerObj);
 				
 				playerObj.openTemplate(true);
+				
+				pnl_log.clearLog();
 			}
 			
 			function playerCloseHandler (event : Event) : void
@@ -938,6 +940,8 @@
 				PopUpManager.removePopUp(playerObj);
 				
 				playerObj = null;
+				
+				pnl_log.showLog();
 				
 			}
 			
@@ -1100,8 +1104,7 @@
 				pnl_variables.grid.dataProvider = new HierarchicalData( arr.sortOn("Name", Array.CASEINSENSITIVE) );
 				pnl_variables.grid.invalidateList();
 				
-				pnl_log.grid.dataProvider = new HierarchicalData( logArr );
-				pnl_log.grid.invalidateList();
+				pnl_log.showLog();
 
 				// --------------------------
 				// fill current buffer output
@@ -1188,54 +1191,32 @@
 			}
 		}
 		
-		private function get logArr() : Array
-		{
-			var logObjectsArray : Array = [];
-			var logContent : String = Log.getInstance().content;
-			
-			var logNotes : Array = logContent.split("\n");
-			if (!logNotes)
-				return [];
-			
-			var noteValues:Array;
-			for each (var note:String in logNotes)
-			{
-				noteValues = note.split("\t");
-				if (!noteValues || noteValues.length != 3)
-					continue;
-				
-				if (noteValues[0].indexOf(":") == -1)
-					continue;
-				
-				logObjectsArray.push({"Time":noteValues[0], "Command":noteValues[1], "Delta":noteValues[2]});
-			}
-			
-			return logObjectsArray;
-		}
-
 		public function switchDebug( enable : Boolean = true ) : void
 		{
+			trace ("switchDebug: " + enable);
 			MenuManager.getInstance().switchDebug(enable);
 			
-			//if(!enable)
+			pnl_variables.grid.dataProvider = null;
+			
+			if (enable)
+				pnl_log.clearLog();
+			else
+				pnl_log.showLog();
+			
+			pnl_node_value.array = [];
+			pnl_output.text = "";
+
+			curDebugBufLen = 0;
+			if ( curDebugNode )
 			{
-				pnl_variables.grid.dataProvider = null;
-				pnl_log.grid.dataProvider = null;
-				
-				pnl_node_value.array = [];
-				pnl_output.text = "";
+				curDebugNode.filters = [];
 
-				curDebugBufLen = 0;
-				if ( curDebugNode )
-				{
-					curDebugNode.filters = [];
+				for each( var arrow : Connector in curDebugNode.inArrows )
+					Connector( arrow ).highlighted = false;
 
-					for each( var arrow : Connector in curDebugNode.inArrows )
-						Connector( arrow ).highlighted = false;
-
-					curDebugNode = null;
-				}
+				curDebugNode = null;
 			}
+			
 		}
 
 		//--------------------------------------------------------------------------
