--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/LogPanel.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/LogPanel.mxml
@@ -5,6 +5,60 @@
 		 width="100%" height="100%"
 		 label="Log">
 	
+	<mx:Script>
+		<![CDATA[
+			import mx.collections.HierarchicalData;
+			import mx.events.FlexEvent;
+			
+			import net.vdombox.powerpack.utils.Log;
+			
+			public function clearLog() : void
+			{
+				trace ("clearLog");
+				grid.dataProvider = null;
+				grid.invalidateList();
+			}
+			
+			public function showLog() : void
+			{
+				trace ("showLog");
+				grid.dataProvider = new HierarchicalData( logArr );
+				grid.invalidateList();
+			}
+			
+			private function get logArr() : Array
+			{
+				var logObjectsArray : Array = [];
+				var logContent : String = Log.getInstance().content;
+				
+				var logNotes : Array = logContent.split("\n");
+				if (!logNotes)
+					return [];
+				
+				var noteValues:Array;
+				for each (var note:String in logNotes)
+				{
+					noteValues = note.split("\t");
+					if (!noteValues || noteValues.length != 3)
+						continue;
+					
+					if (noteValues[0].indexOf(":") == -1)
+						continue;
+					
+					logObjectsArray.push({"Time":noteValues[0], "Command":noteValues[1], "Delta":noteValues[2]});
+				}
+				
+				return logObjectsArray;
+			}
+			
+		]]>
+	</mx:Script>
+	
+	<mx:HBox horizontalAlign="right" width="100%">
+		<mx:Button label="Clear" click="{clearLog()}"/>
+		<mx:Button label="Refresh" click="{showLog()}"/>
+	</mx:HBox>
+	
 	<controls:SuperDataGrid id="grid" designViewDataType="tree"
 							width="100%" height="100%"
 							defaultLeafIcon="{null}"
