player: pause/terminate template when cancel
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8697 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/Player.mxml
+++ b/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/Player.mxml
@@ -341,6 +341,12 @@
 				processStep ( cGeneral );
 			}
 		}
+			
+		public function terminateTemplate() : void
+		{
+			if (ContextManager.templateStruct)
+				ContextManager.templateStruct.terminated = true;
+		}
 
 		private function setProgressHandler( event:TemplateLibEvent ):void
 		{
@@ -394,7 +400,9 @@
 
 		public function alertInterrupt():void
 		{
-
+			if (ContextManager.templateStruct)
+				ContextManager.templateStruct.runPaused = true;
+			
 			AlertPopup.show (
 					LanguageManager.sentences['msg_proceed_interrupt_app_installing'],
 					LanguageManager.sentences['question'],
@@ -404,6 +412,7 @@
 			{
 				if ( event.detail == AlertPopup.YES )
 				{
+					terminateTemplate();
 					processStep ( cFinal );
 				}
 				else if ( !appGenerated && ContextManager.templateStruct )
