player: pause/terminate template when cancel
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8698 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -937,6 +937,8 @@
 			{
 				playerObj.removeEventListener(Event.CLOSE, playerCloseHandler)
 				
+				playerObj.terminateTemplate();
+					
 				PopUpManager.removePopUp(playerObj);
 				
 				playerObj = null;
