changes in air build dialog
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8701 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/ModalDialog.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/ModalDialog.mxml
@@ -35,6 +35,11 @@
 
 		private var closeEvent : CloseEvent = new CloseEvent( CloseEvent.CLOSE );
 		private var _closeHandler : Function;
+			
+		public var labelYES : String = yesLabel;
+		public var labelNO : String = noLabel;
+		public var labelOK : String = okLabel;
+		public var labelCANCEL : String = cancelLabel;
 
 		public function show( flags : uint = 0x4 /* Alert.OK */, closeHandler : Function = null, iconClass : Class = null, defaultButtonFlag : uint = 0x4 /* Alert.OK */ ) : void
 		{
@@ -56,7 +61,7 @@
 
 			if ( buttonFlags & OK )
 			{
-				button = createButton( okLabel, BUTTON_NAME_OK, btnContainer as Container );
+				button = createButton( labelOK, BUTTON_NAME_OK, btnContainer as Container );
 
 				button.visible = true;
 				button.includeInLayout = true;
@@ -67,7 +72,7 @@
 
 			if ( buttonFlags & YES )
 			{
-				button = createButton( yesLabel, BUTTON_NAME_YES, btnContainer as Container );
+				button = createButton( labelYES, BUTTON_NAME_YES, btnContainer as Container );
 
 				button.visible = true;
 				button.includeInLayout = true;
@@ -78,7 +83,7 @@
 
 			if ( buttonFlags & NO )
 			{
-				button = createButton( noLabel, BUTTON_NAME_NO, btnContainer as Container );
+				button = createButton( labelNO, BUTTON_NAME_NO, btnContainer as Container );
 
 				button.visible = true;
 				button.includeInLayout = true;
@@ -89,7 +94,7 @@
 
 			if ( buttonFlags & CANCEL )
 			{
-				button = createButton( cancelLabel, BUTTON_NAME_CANCEL, btnContainer as Container );
+				button = createButton( labelCANCEL, BUTTON_NAME_CANCEL, btnContainer as Container );
 
 				button.visible = true;
 				button.includeInLayout = true;
