git-svn-id: http://svn.vdombox.ru/flextools/trunk@8704 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/skins/PreferencesWindowSkin.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/skins/PreferencesWindowSkin.mxml
@@ -103,7 +103,7 @@
 			
 		</s:HGroup>
 		
-		<s:HGroup width="100%" paddingLeft="10" paddingRight="10" verticalAlign="middle">
+		<s:VGroup width="100%" paddingLeft="10" paddingRight="10" verticalAlign="middle">
 			
 			<s:CheckBox id="autocompleteAutoShow" 
 						label="Shows an autocomplete only by pressing Ctrl+Space" color="#EEEEEE"
@@ -111,7 +111,12 @@
 						selected="{ hostComponent.autoShowAutocomplete }"
 						creationComplete="autocompleteAutoShow_creationCompleteHandler(event)"/>
 			
-		</s:HGroup>
+			<s:CheckBox id="showIndentLinesBox" 
+						label="Shows an indent lines" color="#EEEEEE"
+						skinClass="spark.skins.spark.CheckBoxSkin"
+						selected="{ hostComponent.showIndentLines }"/>
+			
+		</s:VGroup>
 		
 		<s:VGroup width="100%" verticalAlign="middle" paddingTop="15">
 			
