git-svn-id: http://svn.vdombox.ru/flextools/trunk@8707 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ScriptEditor.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ScriptEditor.mxml
@@ -141,12 +141,17 @@
 			
 			private function onCtrlSDown( e : KeyboardEvent ) : void
 			{
-				if ( e.ctrlKey && e.keyCode == Keyboard.S )
+				if ( !e.ctrlKey )
+					return;
+				
+				if ( e.keyCode == Keyboard.S )
 					scriptEditor_saveHandler();
-				else if ( e.ctrlKey && e.keyCode == Keyboard.F )
+				else if ( e.keyCode == Keyboard.F )
 					dispatchEvent( new ScriptEditorEvent ( ScriptEditorEvent.OPEN_FIND ) );
-				else if ( e.ctrlKey && e.keyCode == Keyboard.H )
+				else if ( e.keyCode == Keyboard.H )
 					dispatchEvent( new ScriptEditorEvent ( ScriptEditorEvent.OPEN_FIND_GLOBAL ) );
+				else if ( e.keyCode == Keyboard.W )
+					dispatchEvent( new ScriptEditorEvent ( ScriptEditorEvent.CLOSE_SCRIPT_EDITOR ) );
 			}
 			
 			protected function navigatorcontent2_removeHandler(event:FlexEvent):void
