git-svn-id: http://svn.vdombox.ru/flextools/trunk@8714 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/common/src/net/vdombox/editors/skins/ScriptEditorSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/editors/skins/ScriptEditorSkin.mxml
@@ -25,7 +25,7 @@
 				vsb.maximum = scriptAreaComponent.maxScrollV;
 				vsb.value = scriptAreaComponent.scrollV;
 
-				hsb.maximum = scriptAreaComponent.maxScrollH / 8.0;
+				hsb.maximum = scriptAreaComponent.maxScrollH / 8.0 + 1;
 				hsb.value = scriptAreaComponent.scrollH / 8.0;
 			}
 
