add template version
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8721 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -102,7 +102,7 @@
 			import net.vdombox.powerpack.*;
 			import net.vdombox.powerpack.control.controlbar.ControlBarEvent;
 			import net.vdombox.powerpack.dialog.AboutProgramDialog;
-			import net.vdombox.powerpack.dialog.AirBuildProperties;
+			import net.vdombox.powerpack.dialog.AirBuildDialog;
 			import net.vdombox.powerpack.dialog.ImportFromTpl;
 			import net.vdombox.powerpack.dialog.ModalDialog;
 			import net.vdombox.powerpack.dialog.ProjectsSettingsDialog;
@@ -470,7 +470,7 @@
 			} 
 			else
 			{
-				AirBuildProperties.show();
+				AirBuildDialog.show();
 			}
 				
 			
@@ -489,7 +489,7 @@
 				
 				processSavedTpl();
 				
-				AirBuildProperties.show();
+				AirBuildDialog.show();
 			}
 			
 		}
