--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/controlbar/PowerPackControlBar.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/controlbar/PowerPackControlBar.mxml
@@ -8,7 +8,7 @@
 		<![CDATA[
 			import mx.events.FlexEvent;
 			
-			import net.vdombox.powerpack.dialog.AirBuildProperties;
+			import net.vdombox.powerpack.dialog.AirBuildDialog;
 			import net.vdombox.powerpack.dialog.ProjectsSettingsDialog;
 			import net.vdombox.powerpack.lib.extendedapi.utils.FileUtils;
 			import net.vdombox.powerpack.lib.player.managers.ContextManager;
