--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/AirBuildDialog.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/AirBuildDialog.mxml
@@ -42,17 +42,18 @@
 			
 			private var shObject : SharedObject = SharedObject.getLocal( "air_properties" );
 			
-			private static var _dialog	: AirBuildProperties;
+			private static var _dialog	: AirBuildDialog;
 			
 			private function get windowHeight () : Number
 			{
-				return useLinuxSDK ? 427 : 405;
+				return useLinuxSDK ? 447 : 425;
 			}
 			
 			private  function onShow():void
 			{
 				initFlexSDK_4_1_Path();
 				initAirSDKLinuxPath();
+				initVersion();
 			}
 			
 			private function initFlexSDK_4_1_Path():void
@@ -71,11 +72,11 @@
 				validateAirSDKPath();
 			}
 			
-			static public function show( closeHandler : Function = null ) : AirBuildProperties
+			static public function show( closeHandler : Function = null ) : AirBuildDialog
 			{
 				if ( !_dialog || _dialog.closed )
 				{
-					_dialog = new AirBuildProperties();
+					_dialog = new AirBuildDialog();
 					
 					_dialog.open();
 					_dialog.show( OK, closeHandler, null, OK );
@@ -155,6 +156,8 @@
 			protected function btnBuildClickHandler (event:MouseEvent) : void
 			{
 				saveSDKPath();
+				
+				currentTemplate.version = versionTextField.text;
 				
 				buildInstaller();
 			}
@@ -283,7 +286,8 @@
 					validOutputInstallerFolderPath &&
 					validInstallerFileName &&
 					validInstallerId &&
-					validProjectName;
+					validProjectName &&
+					validVersion;
 			}
 			
 			private function get useLinuxSDK () : Boolean
@@ -317,11 +321,30 @@
 				return projectsComboBox.selectedItem as BuilderTemplateProject;
 			}
 			
+			private function initVersion () : void
+			{
+				versionTextField.text = currentTemplate.version;
+				
+				validateVersion();
+			}
+			
+			private function validateVersion () : void
+			{
+				versionTextField.errorString = validVersion ? null : "Version format:\n<Num>{1,3}.<Num>{1,3}.<Num>+";
+				
+				updateBuildEnableState();
+			}
+			
+			private function get validVersion() : Boolean
+			{
+				return Template.VERSION_FORMAT.test(versionTextField.text);
+			}
+			
 		]]>
 	</mx:Script>
 	
 	<mx:VBox verticalGap="10"
-			 paddingLeft="20" paddingRight="20" paddingTop="20" paddingBottom="20">
+			 paddingLeft="20" paddingRight="20" paddingTop="20">
 		<mx:VBox width="450" horizontalGap="3">
 			<mx:Label text="Export project build" styleName="headerLabel" />
 			<mx:Label text="Build and export VDOM Application Installer" />
@@ -363,8 +386,15 @@
 			</mx:VBox>
 		</mx:HBox>
 		
-		<mx:HBox>
-			<mx:Label text="Project to export: " />
+		<mx:HBox width="450" horizontalGap="3">
+			<mx:Label text="Build version: " width="115"/>
+			<mx:TextInput id="versionTextField" 
+						  restrict="0-9."
+						  change="{validateVersion()}"/>
+		</mx:HBox>
+		
+		<mx:HBox width="450" horizontalGap="3">
+			<mx:Label text="Project to export: " width="115"/>
 			<mx:ComboBox id="projectsComboBox" 
 						 width="200" height="20"
 						 dataProvider="{ContextManager.templates.getItemAt( 0 ).projects}" 
@@ -372,6 +402,7 @@
 						 selectedIndex="{ContextManager.templates.getItemAt( 0 ).selectedProjectIndex}"
 						 change="updateBuildEnableState()"/>
 		</mx:HBox>
+		
 		<mx:VBox verticalGap="10"
 				 top="10" bottom="10" left="10" right="10"
 				 visible="true">
@@ -421,8 +452,10 @@
 		
 	</mx:VBox>
 	
-	<mx:ControlBar width="100%" height="100%" styleName="dlgFooter"
-				   visible="true" verticalAlign="middle">
+	<mx:ControlBar width="100%" height="40" 
+				   verticalAlign="middle" horizontalAlign="right"
+				   visible="true" 
+				   bottom="10">
 		<mx:Button id="buildBtn" label="Build" click="btnBuildClickHandler(event)" />
 	</mx:ControlBar>
 	
