git-svn-id: http://svn.vdombox.ru/flextools/trunk@8723 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/BrowseApplicationsDialog.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/BrowseApplicationsDialog.mxml
@@ -190,6 +190,7 @@
 		
 		<mx:Label text="Add another file"
 				  click="{addAppBox()}"
+				  textDecoration="underline"
 				  color="blue" fontSize="13" fontWeight="bold" />
 	</mx:VBox>
 	
