--- a/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/popup/Question.mxml
+++ b/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/popup/Question.mxml
@@ -90,7 +90,8 @@
 					{
 						if (answers.length == 1)
 						{
-							qResult = answers[0] is BrowseFileAnswer ? BrowseFileAnswer(answers[0]).selectedFile : answers[0].value;
+//							qResult = answers[0] is BrowseFileAnswer ? BrowseFileAnswer(answers[0]).selectedFile : answers[0].value;
+							qResult =  answers[0].value 
 						}
 						else
 							qResult = answersList;
